--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,9 @@
 /coverage
 /public/packs
 /public/packs-test
+/public/uploads
 /node_modules
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+/files
