--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -4,6 +4,12 @@ on:
 jobs:
   testing:
     runs-on: ubuntu-latest
+    services:
+      elasticsearch:
+        image: elasticsearch:6.8.3
+        ports:
+        - 9200/tcp
+        options: -e="discovery.type=single-node" --health-cmd="curl http://localhost:9200/_cluster/health" --health-interval=10s --health-timeout=5s --health-retries=10
     env:
       RAILS_ENV: test
     steps:
