--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -5,6 +5,10 @@ jobs:
   testing:
     runs-on: ubuntu-latest
     services:
+      redis:
+        image: redis
+        ports:
+        - 6379/tcp
       elasticsearch:
         image: elasticsearch:6.8.3
         ports:
