--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -9,11 +9,6 @@ jobs:
         image: redis
         ports:
           - 6379/tcp
-      elasticsearch:
-        image: elasticsearch:6.8.3
-        ports:
-          - 9250/tcp
-        options: -e="discovery.type=single-node" --health-cmd="curl http://localhost:9250/_cluster/health" --health-interval=10s --health-timeout=5s --health-retries=10
     env:
       RAILS_ENV: test
     steps:
@@ -21,10 +16,24 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7.2
+      - name: Setup DB
+        run: rake db:setup
+      - name: Configure sysctl limits
+        run: |
+          sudo swapoff -a
+          sudo sysctl -w vm.swappiness=1
+          sudo sysctl -w fs.file-max=262144
+          sudo sysctl -w vm.max_map_count=262144
+
+      - name: Runs Elasticsearch
+        uses: elastic/elastic-github-actions/elasticsearch@master
+        with:
+          stack-version: 7.6.0
+      - name: Check if ES is running
+        run: curl localhost:9200
       - name: Check ruby version
         run: |
           ruby -v
-          echo job.services.elasticsearch.ports[9200]
       - name: Install Bundler
         run: |
           gem install bundler
