--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -4,11 +4,6 @@ on:
 jobs:
   testing:
     runs-on: ubuntu-latest
-    services:
-      redis:
-        image: redis
-        ports:
-          - 6379/tcp
     env:
       RAILS_ENV: test
     steps:
@@ -22,7 +17,8 @@ jobs:
           sudo sysctl -w vm.swappiness=1
           sudo sysctl -w fs.file-max=262144
           sudo sysctl -w vm.max_map_count=262144
-
+      - name: Start Redis
+        uses: supercharge/redis-github-action@1.4.0
       - name: Runs Elasticsearch
         uses: elastic/elastic-github-actions/elasticsearch@master
         with:
