--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -8,6 +8,11 @@ jobs:
       RAILS_ENV: test
     steps:
       - uses: actions/checkout@v2
+      - name: Cache node_modules
+        uses: actions/cache@v1
+        with:
+          path: ./node_modules
+          key: node-${{ hashFiles('**/yarn.lock') }}
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7.2
